--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -4,90 +4,113 @@ layout: default
 ---
 
 <div class="w-full px-0 mx-0">
-  <!-- Contact Section -->
-  <!-- Contact Section -->
-  <section class="my-10 bg-white p-8">
-    <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
+  <!-- Contact Us Today Section -->
+  <section class="pt-12">
+    <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12">
       <!-- Left Side: Contact Info -->
-      <div class="flex flex-col">
-        <h2 class="text-2xl md:text-4xl font-bold mb-4">Get in Touch</h2>
+      <div class="flex flex-col justify-center">
+        <h2 class="mb-4">Contact Us Today</h2>
         <p class="text-gray-600 mb-8">
-          Reach out to us directly or use the form to send us a message. We’d
-          love to hear from you!
+          Have questions or looking for your next vehicle? Reach out to us
+          directly or fill out the form. Our team is here to help you find the
+          perfect car!
         </p>
         <div class="space-y-6">
           <div>
-            <h3 class="text-lg font-semibold">Phone</h3>
+            <h4>Phone</h4>
             <p class="text-gray-700">(555) 555-5555</p>
           </div>
           <div>
-            <h3 class="text-lg font-semibold">Email</h3>
+            <h4>Email</h4>
             <p class="text-gray-700">contact@example.com</p>
           </div>
           <div>
-            <h3 class="text-lg font-semibold">Location</h3>
+            <h4>Location</h4>
             <p class="text-gray-700">123 Main Street, Hometown, USA</p>
           </div>
         </div>
       </div>
 
-      <!-- Right Side: Contact Form -->
+      <!-- Right Side: Owner's Image -->
+      <div class="flex justify-center md:justify-end items-center">
+        <img
+          src="../static/img/employees/caleb-schaefer.jpg"
+          alt="Caleb Schaefer"
+          class="w-96 h-96 object-cover rounded-lg shadow-lg"
+        />
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Form Section -->
+  <section class="my-12 bg-white">
+    <div class="container mx-auto px-6 py-8 grid grid-cols-1 gap-12">
+      <!-- Right Side: Contact Form (unchanged) -->
       <div class="flex justify-center items-center">
-        <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md w-full">
           <form
             method="POST"
             action="/thank-you"
             netlify
             class="grid grid-cols-1 gap-4"
           >
-            <!-- Name Field -->
-            <div>
-              <label for="name" class="block text-gray-700 font-semibold"
-                >Your Name</label
-              >
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                placeholder="John Doe"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
-            </div>
+            <!-- Name, Email, and Phone Fields in a Row on Desktop -->
+            <div class="md:flex md:space-x-4">
+              <!-- Name Field -->
+              <div class="flex-1">
+                <label for="name" class="block text-gray-700 font-semibold mt-4"
+                  >Name</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  required
+                  placeholder="Name"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                />
+              </div>
 
-            <!-- Email Field -->
-            <div>
-              <label for="email" class="block text-gray-700 font-semibold"
-                >Your Email</label
-              >
-              <input
-                type="email"
-                id="email"
-                name="email"
-                required
-                placeholder="you@example.com"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
-            </div>
+              <!-- Email Field -->
+              <div class="flex-1">
+                <label
+                  for="email"
+                  class="block text-gray-700 font-semibold mt-4"
+                  >Email</label
+                >
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  required
+                  placeholder="Email"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                />
+              </div>
 
-            <!-- Phone Field -->
-            <div>
-              <label for="phone" class="block text-gray-700 font-semibold"
-                >Your Phone</label
-              >
-              <input
-                type="tel"
-                id="phone"
-                name="phone"
-                placeholder="(555) 555-5555"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
+              <!-- Phone Field -->
+              <div class="flex-1">
+                <label
+                  for="phone"
+                  class="block text-gray-700 font-semibold mt-4"
+                  >Phone</label
+                >
+                <input
+                  type="tel"
+                  id="phone"
+                  name="phone"
+                  placeholder="Phone"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                />
+              </div>
             </div>
 
             <!-- Message Field -->
             <div>
-              <label for="message" class="block text-gray-700 font-semibold"
-                >Your Message</label
+              <label
+                for="message"
+                class="block text-gray-700 font-semibold mt-2"
+                >Message</label
               >
               <textarea
                 id="message"
