--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@ path: home
       </p>
       <div class="mt-4">
         <a
-          href="/testimonials"
+          href="/about"
           class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600 inline-block"
         >
           Learn More
