--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -13,9 +13,7 @@ layout: default
   </section>
 
   <!-- Testimonials Section -->
-  <section class="my-12">
-    <h2 class="text-center">What Our Customers Say</h2>
-    <p class="text-center mt-2">Hear from satisfied customers.</p>
+  <section>
     <div
       class="container p-6 mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
     >
