home page styling done

--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,42 @@ path: home
 <div class="w-full px-0 mx-0">
   <!-- Hero Section -->
   <section
-    class="flex flex-col justify-center items-center text-center relative w-full h-[400px] md:h-[600px] bg-cover bg-center"
-    style="background-image: url('./static/img/about/schaefer-auto10.jpeg');"
+  class="flex flex-col justify-center items-center text-center relative w-full h-[400px] md:h-[600px] bg-cover bg-center"
+  style="background-image: url('./static/img/about/schaefer-auto10.jpeg');"
 >
-    <!-- Blue overlay -->
-    <div class="absolute inset-0 bg-[#1E6CB0] opacity-60"></div>
-    <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-white">Find the right used vehicle for you!</h1>
-      <p class="mt-4 text-lg md:text-xl text-white">
-        Based out of Lomira, Wisconsin, we work with you to find the perfect vehicle at an affordable price.
-      </p>
-      <div class="mt-8 space-x-4">
-        <!-- First Button: View Inventory (Solid Blue) -->
-        <a
-          href="/vehicles"
-          class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
-        >
-          View Inventory
-        </a>
+  <!-- Blue overlay -->
+  <div class="absolute inset-0 bg-[#1E6CB0] opacity-60"></div>
+  <div class="relative z-10 px-4 md:px-0">
+    <h1 class="text-white">Find Your Perfect Ride Today!</h1>
+    <p 
+      class="mt-4 text-lg md:text-xl text-white mx-auto"
+      style="max-width: 600px;"
+    >
+      Located in Lomira, Wisconsin, we’re dedicated to helping you drive away in the ideal vehicle at a price that fits your budget.
+    </p>
+    <div class="mt-8 space-x-4">
+      <!-- First Button: View Inventory (Solid Blue) -->
+      <a
+        href="/vehicles"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+      >
+        View Inventory
+      </a>
 
-        <!-- Second Button: Contact Us (Outlined Blue) -->
-        <a
-          href="/contact"
-          class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
-        >
-          Contact Us
-        </a>
-      </div>
+      <!-- Second Button: Contact Us (Outlined Blue) -->
+      <a
+        href="/contact"
+        class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+      >
+        Contact Us
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
 <!-- Featured Inventory Section -->
-<section class="container my-12 px-6">
+<section class="container mt-10 px-6">
   <h2 class="text-left">Featured Inventory</h2>
   <p class="text-left mt-2">Check out our latest vehicles.</p>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
@@ -93,7 +97,7 @@ path: home
 
 
   <!-- Services Section -->
-  <section class="my-16 bg-[#1E6CB0]">
+  <section class="mt-16 bg-[#1E6CB0]">
     <div class="container p-6 rounded-lg">
       <h2 class="text-center text-white">
         Our Services
@@ -135,7 +139,7 @@ path: home
   
 
 <!-- Testimonials Section -->
-<section class="my-12">
+<section class="mt-12">
   <div class="container mx-auto p-6">
     <h2 class="text-center">
       What Our Customers Say
@@ -169,7 +173,7 @@ path: home
 
 
 <!-- About Section -->
-<section class="my-12 bg-gray-100">
+<section class="mt-12 bg-gray-100">
   <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
     <div class="flex flex-col justify-center">
       <h2>About Us</h2>
@@ -204,7 +208,7 @@ path: home
 
 
 <!-- Contact Section -->
-<section class="my-12 bg-white">
+<section class="mt-8 bg-white">
   <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
