--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ path: home
   <!-- Blue overlay -->
   <div class="absolute inset-0 bg-[#1E6CB0] opacity-60"></div>
   <div class="relative z-10 px-4 md:px-0">
-    <h1 class="text-white">Find Your Perfect Ride Today!</h1>
+    <h1>Find Your Perfect Ride Today!</h1>
     <p 
       class="mt-4 text-lg md:text-xl text-white mx-auto"
       style="max-width: 600px;"
