--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -34,7 +34,7 @@ layout: default
       <!-- Right Side: Owner's Image -->
       <div class="flex justify-center md:justify-end items-center">
         <img
-          src="../static/img/employees/caleb-schaefer.jpg"
+          src="../static/img/about/schaefer-auto11.jpeg"
           alt="Caleb Schaefer"
           class="w-96 h-96 object-cover rounded-lg shadow-lg"
         />
@@ -43,7 +43,7 @@ layout: default
   </section>
 
   <!-- Contact Form Section -->
-  <section class="my-12 bg-white">
+  <section class="mt-8 bg-white">
     <div class="container mx-auto px-6 py-8 grid grid-cols-1 gap-12">
       <!-- Right Side: Contact Form (unchanged) -->
       <div class="flex justify-center items-center">
