--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -81,7 +81,7 @@ layout: default
   </section>
 
   <!-- Thank You Section -->
-  <section class="my-4 bg-white">
+  <section class="md:mt-12 mb-12 bg-white">
     <div class="container mx-auto p-6 grid grid-cols-1 lg:grid-cols-2 gap-8">
       <!-- Left: Thank You Message -->
       <div>
