--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -64,7 +64,7 @@ title: Vehicle Inventory
     </div>
   </section>
 
-  <section class="container mt-8 px-6">
+  <section class="container mt-8 mb-16 px-6">
     <h2 class="font-bold pt-12">$25,000 or more</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
       {% for post in collections.post | reverse %} {% if post.data.price >=
