--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -43,7 +43,7 @@ layout: default
   </section>
 
   <!-- Contact Form Section -->
-  <section class="mt-8 bg-white">
+  <section class="mt-8 mb-12 bg-white">
     <div class="container mx-auto px-6 py-8 grid grid-cols-1 gap-12">
       <!-- Right Side: Contact Form (unchanged) -->
       <div class="flex justify-center items-center">
