--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ path: home
   style="background-image: url('./static/img/about/schaefer-auto10.jpeg');"
 >
   <!-- Blue overlay -->
-  <div class="absolute inset-0 bg-[#1E6CB0] opacity-60"></div>
+  <div class="absolute inset-0 bg-black opacity-50"></div>
   <div class="relative z-10 px-4 md:px-0">
     <h1>Find Your Perfect Ride Today!</h1>
     <p 
@@ -175,7 +175,7 @@ path: home
 
 
 <!-- Contact Section -->
-<section class="mt-8 bg-white">
+<section class="mt-8 mb-12 bg-white">
   <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
